--- a/assets/sass/noscript.scss
+++ b/assets/sass/noscript.scss
@@ -5,43 +5,31 @@
 @import 'libs/breakpoints';
 
 /*
-	Lens by HTML5 UP
+	Aerial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Main */
+/* Wrapper */
 
-	#main {
+	#wrapper {
 		opacity: 1 !important;
-
-		@if _misc(main-side) == 'left' {
-			left: 0 !important;
-		}
-		@else {
-			right: 0 !important;
-		}
 	}
 
-	body:before {
-		content: 'Javascript is disabled :(';
-		display: block;
-		position: absolute;
-		top: 50%;
-		width: calc(100% - #{_size(main)} * 0.333333333);
-		height: 4em;
-		margin-top: -2em;
-		color: mix(_palette(page-bg), #fff, 90%);
-		cursor: default;
-		font-size: 3em;
-		line-height: 4em;
-		text-align: center;
-		white-space: nowrap;
+/* Overlay */
 
-		@if _misc(main-side) == 'left' {
-			right: 0;
-		}
-		@else {
-			left: 0;
+	#overlay {
+		opacity: 1 !important;
+	}
+
+/* Header */
+
+	#header {
+		opacity: 1 !important;
+
+		nav {
+			li {
+				opacity: 1 !important;
+			}
 		}
 	}
